# rl-experiments

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
docs/: AGENT_PLAYBOOK.md  EXPERIMENTS.md  LOGGING.md  MODAL.md  UV.md
experiments/reports/: p02_policy_gradients_running_report.md
experiments/videos/: p02_cartpole_training_progress_seed1_smooth_short.json
rl_lab/: __init__.py
rl_lab/core/: __init__.py  checkpointing.py  config.py  logging.py  metrics.py  registry.py  seeding.py
rl_lab/modal/: __init__.py  app.py  runner.py
rl_lab/projects/: __init__.py
rl_lab/projects/p02_policy_gradients/: AGENTS.md  README.md  REPORT.md  SPEC.md  __init__.py  eval.py  models.py  ppo.py  rollout.py  train.py
rl_lab/projects/p02_policy_gradients/configs/: ppo_acrobot_zoo.yaml  ppo_cartpole_debug.yaml  ppo_lunarlander_zoo.yaml
rl_lab/projects/p02_policy_gradients/tests/: test_checkpoint_eval.py  test_config.py  test_logging.py  test_ppo_todos.py  test_rollout.py  test_smoke.py  test_train_infra.py
scripts/: new_project.py  plot_wandb_sweep.py  render_policy_video.py  render_training_progress_video.py
