[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rl-frontier-lab-starter"
version = "0.1.0"
description = "Agent-friendly reinforcement learning study repo starter."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "torch>=2.2",
  "gymnasium[box2d,classic-control]>=0.29",
  "pyyaml>=6.0",
  "swig>=4.4.1",
]

[dependency-groups]
dev = [
  "imageio>=2.37.3",
  "imageio-ffmpeg>=0.6.0",
  "matplotlib>=3.10.9",
  "pytest>=8.0",
  "ruff>=0.6",
  "seaborn>=0.13.2",
]
logging = [
  "wandb>=0.17",
]
modal = [
  "modal>=1.1",
]
llm = [
  "transformers>=4.44",
  "datasets>=2.20",
  "accelerate>=0.33",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["rl_lab*"]

[tool.pytest.ini_options]
testpaths = ["rl_lab/projects"]
python_files = ["test_*.py"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
